--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
             <button class="normal" type="submit">Enviar</button>
 
             <input type="hidden" name="accessKey" value="b0e6052d-b9d4-4ac0-9673-fc050497cdb1">
-            <input type="hidden" name="redirectTo" value="obrigado.html">
+            <input type="hidden" name="redirectTo" value="https://uselavieapp.netlify.app/obrigado">
         </form>
 
     </section>
@@ -107,7 +107,7 @@
             <button class="normal" type="submit">Inscrição</button>
 
             <input type="hidden" name="accessKey" value="62f4c9db-a698-493e-a0b2-ee6944def654">
-            <input type="hidden" name="redirectTo" value="obrigado.html">
+            <input type="hidden" name="redirectTo" value="https://uselavieapp.netlify.app/obrigado">
         </form>
     </section>
 
