--- a/shop.html
+++ b/shop.html
@@ -106,7 +106,7 @@
             <button class="normal" type="submit">Inscrição</button>
 
             <input type="hidden" name="accessKey" value="62f4c9db-a698-493e-a0b2-ee6944def654">
-            <input type="hidden" name="redirectTo" value="http://127.0.0.1:5500/Use%20Lavie%202.1/obrigado.html">
+            <input type="hidden" name="redirectTo" value="https://uselavieapp.netlify.app/obrigado">
         </form>
     </section>
 
